--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, ubuntu-latest]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -37,7 +37,7 @@ jobs:
         shell: bash
         if: matrix.os == 'ubuntu-latest'
         run: |
-          apt install duckdb
+          sudo apt install duckdb
           clang src/sql.c \
             -O3 -flto \
             -dynamiclib \
